fixing javore fields and refactoring

--- a/angular.json
+++ b/angular.json
@@ -125,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "calculate-salary"
+  "defaultProject": "calculate-salary",
+  "cli": {
+    "analytics": false
+  }
 }
